force-app/main/default/objects/KimbleOne__TaxRate__c/KimbleOne__TaxRate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <description>Stores changes in tax rates over time for a particular tax code.</description>
    <label>Tax Rate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>