force-app/main/default/objects/KimbleOne__TaxRate__c/fields/KimbleOne__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EffectiveDate__c</fullName>
    <description>The date the tax rate is effective from.</description>
    <inlineHelpText>The date the tax rate is effective from.</inlineHelpText>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>