force-app/main/default/objects/KimbleOne__TaxRate__c/fields/KimbleOne__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxCode__c</fullName>
    <label>Tax Code</label>
    <referenceTo>KimbleOne__TaxCode__c</referenceTo>
    <relationshipLabel>Tax Rates</relationshipLabel>
    <relationshipName>TaxRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>