force-app/main/default/objects/KimbleOne__TaxRate__c/fields/KimbleOne__TaxRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxRate__c</fullName>
    <label>Tax Rate</label>
    <precision>13</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>